--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -259,17 +259,17 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown submenu">
-                        <a class="nav-link dropdown-toggle" href="/forum" role="button" data-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">
                             Forum
                         </a>
-                        <!-- <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false"
+                        <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false"
                            data-toggle="dropdown"></i>
                         <ul class="dropdown-menu">
                             <li class="nav-item"><a href="forums.html" class="nav-link">Forums Root</a></li>
                             <li class="nav-item"><a href="forum-topics.html" class="nav-link">Forum Topics</a></li>
-                            <li class="nav-item"><a href="forum-single.html" class="nav-link">Forum Single</a></li>
-                        </ul> -->
+                            <li class="nav-item"><a href="/forum-single" class="nav-link">Forum Single</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
