commit for single1 html

--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -464,7 +464,7 @@
                             <!-- /.action-content -->
 
                             <div class="action-button-container">
-                                <a href="#" class="action_btn btn-ans">Ask a Question</a>
+                                <a href="/post-edit" class="action_btn btn-ans">Ask a Question</a>
                             </div>
                             <!-- /.action-button-container -->
                         </div>
@@ -659,7 +659,7 @@
                                     </div>
                                     <div class="entry-content">
                                         <h3 class="post-title">
-                                            <a href="forum-single.html">Workspace/Org Administration</a>
+                                            <a href="/forum-single1">Are there any scandal-free sanitary pad brands left?</a>
                                         </h3>
                                         <ul class="meta">
                                             <li><img src="../static/img/home_support/cmm1.png" alt="cmm"><a href="#">WordPress
