--- a/code/templates/index-3.html
+++ b/code/templates/index-3.html
@@ -242,9 +242,9 @@
                             </a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="forums.html" class="nav-link">Forums Root</a></li>
-                                <li class="nav-item"><a href="forum-topics.html" class="nav-link">Forum Topics</a></li>
-                                <li class="nav-item"><a href="forum-single.html" class="nav-link">Forum Single</a></li>
+                                <li class="nav-item"><a href="/forums" class="nav-link">Forums Root</a></li>
+                                <li class="nav-item"><a href="/forum-topics" class="nav-link">Forum Topics</a></li>
+                                <li class="nav-item"><a href="/forum-single" class="nav-link">Forum Single</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown submenu">
