--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -517,7 +517,7 @@
                             <!-- Submit Button -->
                             <div class="action-button-container action-btns">
                                 <button type="submit" class="action_btn btn-ans ask-btn reply-btn">Post</button>
-                                <a href="#" class="action_btn btn-ans ask-btn too-btn">Cancel</a>
+                                <a href="/forum-topics" class="action_btn btn-ans ask-btn too-btn">Cancel</a>
                             </div>
                         </form>
                     </div>
