--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -496,8 +496,7 @@
                             </div>
 
                             <!-- Tags -->
-                            <div class="card">
-                                <div class="card-overlay"></div>
+                            <div class="form-group">
                                 <label for="post-tags">Tags</label>
                                 <input type="text" id="post-tags" class="form-control"
                                        placeholder="Add tags separated by commas">
@@ -519,6 +518,7 @@
                                 <button type="submit" class="action_btn btn-ans ask-btn reply-btn">Post</button>
                                 <a href="/forum-topics" class="action_btn btn-ans ask-btn too-btn">Cancel</a>
                             </div>
+
                         </form>
                     </div>
                 </div>
