blog及上边栏修改

--- a/code/templates/accordion.html
+++ b/code/templates/accordion.html
@@ -298,7 +298,7 @@
                             </a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="blog-grid.html" class="nav-link">Blog Grid</a></li>
+                                <li class="nav-item"><a href="blog.html" class="nav-link">Blog Grid</a></li>
                                 <li class="nav-item"><a href="blog-grid-two.html" class="nav-link">Blog Grid Two</a></li>
                                 <li class="nav-item"><a href="blog-list.html" class="nav-link">Blog List</a></li>
                                 <li class="nav-item"><a href="blog-single.html" class="nav-link">Blog Details</a></li>
@@ -459,7 +459,7 @@
                             </a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon"></i>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="blog-grid.html" class="nav-link">Blog Grid</a></li>
+                                <li class="nav-item"><a href="blog.html" class="nav-link">Blog Grid</a></li>
                                 <li class="nav-item"><a href="blog-grid-two.html" class="nav-link">Blog Grid Two</a></li>
                                 <li class="nav-item"><a href="blog-list.html" class="nav-link">Blog List</a></li>
                                 <li class="nav-item"><a href="blog-single.html" class="nav-link">Blog Details</a></li>
