--- a/code/templates/image-pointing.html
+++ b/code/templates/image-pointing.html
@@ -299,7 +299,7 @@
                             </a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="blog-grid.html" class="nav-link">Blog Grid</a></li>
+                                <li class="nav-item"><a href="blog.html" class="nav-link">Blog Grid</a></li>
                                 <li class="nav-item"><a href="blog-grid-two.html" class="nav-link">Blog Grid Two</a></li>
                                 <li class="nav-item"><a href="blog-list.html" class="nav-link">Blog List</a></li>
                                 <li class="nav-item"><a href="blog-single.html" class="nav-link">Blog Details</a></li>
@@ -467,12 +467,12 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link" href="blog-grid.html">
+                            <a class="nav-link" href="blog.html">
                                 Blog
                             </a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon"></i>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="blog-grid.html" class="nav-link">Blog Grid</a></li>
+                                <li class="nav-item"><a href="blog.html" class="nav-link">Blog Grid</a></li>
                                 <li class="nav-item"><a href="blog-grid-two.html" class="nav-link">Blog Grid Two</a></li>
                                 <li class="nav-item"><a href="blog-list.html" class="nav-link">Blog List</a></li>
                                 <li class="nav-item"><a href="blog-single.html" class="nav-link">Blog Details</a></li>
